# bazel-tutorials

./: .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE.bazel  go.mod
exercise-01/: BUILD.bazel  README.md  converter.go  data.json  defs.bzl
